--- a/src/style/app.scss
+++ b/src/style/app.scss
@@ -1,8 +1,7 @@
 // styles in src/style directory are applied to the whole page
+@import url('https://fonts.googleapis.com/css?family=Muli:400,700');
+
 body {
-  background: #fff;
-  color: #000;
-}
-a {
-  color: #03A9F4;
+  background: #e8e8e8;
+  font-family: 'Muli';
 }
