--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,7 +1,71 @@
 // component styles are encapsulated and only applied to their components
-div {
-  font: medium -moz-fixed;
-  padding: 2px;
-  resize: both;
-  text-align: left;
+.form-container {
+  display: block;
+  width: 90%;
+  padding: 2em;
+  margin: 2em auto;
+  background: #fff;
+}
+
+.alert {
+  background: #f2edda;
+  padding: 7px;
+  font-size: .9em;
+  margin-bottom: 20px;
+  display: inline-block;
+  animation: 2s alertAnim forwards;
+}
+
+.button {
+  margin-top: 3rem;
+}
+
+h1 {
+  margin-bottom: 2rem;
+  font-weight: bold;
+  font-family: 'Muli';
+  font-size: 2em;
+}
+
+@keyframes alertAnim {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+.git-api-table {
+  overflow: auto;
+  min-height: 300px;
+}
+
+.git-api-container {
+  display: flex;
+  flex-direction: column;
+  max-height: 500px;
+  min-width: 300px;
+  position: relative;
+}
+
+.mat-table {
+  overflow: auto;
+  max-height: 500px;
+}
+
+.git-api-state-not-open {
+  color: #4DCACA;
+  text-decoration: line-through;
+}
+
+.git-api-error {
+  background: #f2edda;
+  padding: 7px;
+  font-size: .9em;
+  margin-bottom: 20px;
+  display: inline-block;
+  animation: 2s alertAnim forwards;
 }
